Moved to paper plugin for 1.21 enchant support